# aoc-rs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  main.rs  util.rs
src/y2018/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d10.rs
src/y2018/d00/: mod.rs
src/y2018/d01/: mod.rs
src/y2018/d02/: mod.rs
src/y2018/d03/: mod.rs
src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day22.rs
src/year2016/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
src/year2018/: day00.rs  day09.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2019/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
src/year2020/: day01.rs
src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
src/year2023/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day12.ugly.rs  day13.rs  day14.rs  day15.rs  day16.rs
