[package]
name = "aoc"
version = "0.1.0"
authors = ["Nicholas Lordello <nlordell@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
bitflags = "2.3.3"
chrono = "0.4"
clap = "2"
colored = "2.1.0"
failure = "0.1"
failure_derive = "0.1"
itertools = "0.11.0"
lazy_static = "1"
maplit = "1.0.2"
nalgebra = "0.32.3"
native-tls = "0.2"
num-integer = "0.1.45"
regex = "1"
