[package]
name = "aoc"
version = "0.1.0"
authors = ["Nicholas Lordello <nlordell@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.95"
clap = "4"
colored = "3.0.0"
failure = "0.1.8"
failure_derive = "0.1.8"
itertools = "0.14.0"
maplit = "1.0.2"
nalgebra = "0.33.2"
native-tls = "0.2.13"
num-integer = "0.1.46"
thiserror = "2.0.11"
