[package]
name = "aoc"
version = "0.1.0"
authors = ["Nicholas Lordello <nlordell@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.10.0"
chrono = "0.4"
clap = "4"
failure = "0.1"
failure_derive = "0.1"
hex = "0.4.3"
hex-literal = "1"
integer-partitions = "0.1.1"
itertools = "0.14.0"
lazy_static = "1"
maplit = "1.0.2"
md-5 = "0.10.6"
nalgebra = {version = "0.34", default-features = false}
native-tls = "0.2"
num = "0.4.3"
petgraph = "0.8.3"
regex = "1"
serde_json = "1.0.145"
anyhow = "1.0.100"
colored = "3.0.0"
num-integer = "0.1.46"
thiserror = "2.0.17"
